Fix two CSS issues
The provider buttons were coming out of their box due to a float left, and the related research guides did not look correct on mobile due to a float left

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -218,9 +218,9 @@ table td {
   padding: 7px; }
 
 .provider-btn {
-  float: left;
-  display: inline;
+  display: inline !important;
   padding: 10px;
+  margin: 0 !important;
   margin-right: 10px !important;
   -webkit-transition: background 300ms ease;
   -moz-transition: background 300ms ease;
@@ -4843,5 +4843,7 @@ ul.link-list {
 @media only screen and (min-width: 768px) {
   .footer-left {
     min-height: 0 !important; } }
+.grid-within-grid-one-item > div {
+  float: none; }
 
 /*# sourceMappingURL=base-sass.css.map */
